# infotecs

./: README.md
Program1_stage4/: CMakeLists.txt
Program1_stage4/src/: main.cpp
Program2_dart/: server.dart
program2_flutter/: README.md  pubspec.yaml
program2_flutter/android/app/: build.gradle.kts
program2_flutter/android/app/src/main/: AndroidManifest.xml
program2_flutter/android/app/src/main/kotlin/com/example/program2_flutter/: MainActivity.kt
program2_flutter/ios/Runner/: Info.plist
program2_flutter/ios/Runner.xcodeproj/: project.pbxproj
program2_flutter/lib/: main.dart
program2_flutter/linux/: CMakeLists.txt
program2_flutter/linux/runner/: my_application.cc
program2_flutter/macos/Runner.xcodeproj/: project.pbxproj
program2_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
program2_flutter/macos/Runner/Configs/: AppInfo.xcconfig
program2_flutter/test/: widget_test.dart
program2_flutter/web/: index.html  manifest.json
program2_flutter/windows/: CMakeLists.txt
program2_flutter/windows/runner/: Runner.rc  main.cpp
